--- a/libs/ngx-dynamic-form-builder/package.json
+++ b/libs/ngx-dynamic-form-builder/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ngx-dynamic-form-builder",
+  "name": "@yoolabs/ngx-dynamic-form-builder",
   "version": "1.3.0",
   "description": "FormBuilder + class-transformer + class-validator = dynamic form group builder for Angular9+",
   "keywords": [
