--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yoolabs/ngx-dynamic-form-builder",
-  "version": "1.3.0",
+  "version": "1.3.4",
   "description": "FormBuilder + class-transformer + class-validator = dynamic form group builder for Angular9+",
   "keywords": [
     "form-builder",
@@ -46,6 +46,7 @@
     "lib:build-lib": "ng build ngx-dynamic-form-builder --prod",
     "lib:postbuild-lib": "./node_modules/.bin/cp-cli ./CHANGELOG.md ./dist/ngx-dynamic-form-builder/CHANGELOG.md",
     "lib:build": "run-s prepare:prod lib:build-lib lib:postbuild-lib",
+    "lib:publish": "run-s prepare:prod lib:build-lib lib:postbuild-lib & npm publish ./dist/ngx-dynamic-form-builder",
     "app:prebuild": "ng build demo --prod",
     "app:build": "run-s format:fix prepare:mono app:prebuild",
     "lite-server": "lite-server -c bs-config.json",
@@ -82,7 +83,7 @@
     "@angular/service-worker": "^9.0.7",
     "@types/prismjs": "^1.16.0",
     "class-transformer": "^0.2.3",
-    "class-validator": "^0.11.1",
+    "class-validator": "^0.11.0",
     "core-js": "^3.6.4",
     "lodash-es": "^4.17.15",
     "lodash.clonedeep": "^4.5.0",
