--- a/libs/ngx-dynamic-form-builder/package.json
+++ b/libs/ngx-dynamic-form-builder/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ngx-dynamic-form-builder",
-  "version": "2.0.1",
+  "name": "@yoolabs/ngx-dynamic-form-builder",
+  "version": "2.0.2rc2",
   "description": "FormBuilder + class-transformer-global-storage + class-validator-multi-lang = dynamic form group builder for Angular12+",
   "keywords": [
     "form-builder",
@@ -24,14 +24,14 @@
     "angular12"
   ],
   "license": "MIT",
-  "author": "EndyKaufman <admin@site15.ru>",
+  "author": "Jannik Mewes, EndyKaufman <admin@site15.ru>",
   "bugs": {
-    "url": "https://github.com/EndyKaufman/ngx-dynamic-form-builder/issues"
+    "url": "https://github.com/jbjhjm/ngx-dynamic-form-builder/issues"
   },
-  "homepage": "https://github.com/EndyKaufman/ngx-dynamic-form-builder",
+  "homepage": "https://github.com/jbjhjm/ngx-dynamic-form-builder",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/EndyKaufman/ngx-dynamic-form-builder.git"
+    "url": "git+https://github.com/jbjhjm/ngx-dynamic-form-builder.git"
   },
   "maintainers": [
     {
