--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ngx-dynamic-form-builder",
-  "version": "2.1.0",
+  "name": "@yoolabs/ngx-dynamic-form-builder",
+  "version": "2.1.0rc1",
   "description": "FormBuilder + class-transformer-global-storage + class-validator-multi-lang = dynamic form group builder for Angular12+",
   "keywords": [
     "form-builder",
