--- a/package.json
+++ b/package.json
@@ -77,71 +77,71 @@
   },
   "private": true,
   "devDependencies": {
-    "@angular-devkit/build-angular": "13.2.2",
-    "@angular-eslint/eslint-plugin": "13.0.1",
-    "@angular-eslint/eslint-plugin-template": "13.0.1",
-    "@angular-eslint/template-parser": "13.0.1",
-    "@angular/cli": "13.2.2",
-    "@angular/compiler-cli": "13.2.2",
-    "@angular/language-service": "13.2.2",
-    "@nrwl/angular": "13.4.6",
-    "@nrwl/cli": "13.4.6",
-    "@nrwl/cypress": "13.4.6",
-    "@nrwl/eslint-plugin-nx": "13.4.6",
-    "@nrwl/jest": "13.4.6",
-    "@nrwl/linter": "13.4.6",
-    "@nrwl/tao": "13.4.6",
-    "@nrwl/workspace": "13.4.6",
-    "@types/jest": "27.0.2",
+    "@angular-devkit/build-angular": "14.2.2",
+    "@angular-eslint/eslint-plugin": "14.0.4",
+    "@angular-eslint/eslint-plugin-template": "14.0.4",
+    "@angular-eslint/template-parser": "14.0.4",
+    "@angular/cli": "13.3.9",
+    "@angular/compiler-cli": "14.2.2",
+    "@angular/language-service": "14.2.2",
+    "@nrwl/angular": "14.7.5",
+    "@nrwl/cli": "14.7.5",
+    "@nrwl/cypress": "14.7.5",
+    "@nrwl/eslint-plugin-nx": "14.7.5",
+    "@nrwl/jest": "14.7.5",
+    "@nrwl/linter": "14.7.5",
+    "@nrwl/tao": "14.7.5",
+    "@nrwl/workspace": "14.7.5",
+    "@types/jest": "28.1.8",
     "@types/lodash.clonedeep": "4.5.6",
     "@types/lodash.get": "4.4.6",
     "@types/lodash.mergewith": "4.6.6",
     "@types/lodash.set": "4.3.6",
     "@types/node": "17.0.10",
     "@types/validator": "13.7.1",
-    "@typescript-eslint/eslint-plugin": "5.10.0",
-    "@typescript-eslint/parser": "5.10.0",
+    "@typescript-eslint/eslint-plugin": "5.33.1",
+    "@typescript-eslint/parser": "5.33.1",
     "class-validator-multi-lang": "0.130.201",
     "cypress": "9.3.1",
     "cypress-multi-reporters": "1.5.0",
-    "eslint": "8.7.0",
+    "eslint": "8.15.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-cypress": "2.12.1",
-    "jest": "27.4.7",
-    "jest-preset-angular": "11.1.0",
+    "jest": "28.1.3",
+    "jest-preset-angular": "12.2.2",
     "lite-server": "2.6.1",
     "lodash.clonedeep": "4.5.0",
     "lodash.mergewith": "4.6.2",
     "lodash.set": "4.3.2",
     "mochawesome": "7.0.1",
-    "ng-packagr": "13.1.3",
+    "ng-packagr": "14.2.1",
     "npm-run-all": "4.1.5",
     "postcss": "8.4.5",
-    "postcss-import": "14.0.2",
-    "postcss-preset-env": "7.2.3",
+    "postcss-import": "14.1.0",
+    "postcss-preset-env": "7.5.0",
     "postcss-url": "10.1.3",
-    "prettier": "2.5.1",
+    "prettier": "2.6.2",
     "rucken": "3.4.0",
     "standard-version": "9.3.2",
-    "ts-jest": "27.1.3",
-    "typescript": "4.4.2",
+    "ts-jest": "28.0.8",
+    "typescript": "4.7.4",
     "validator": "13.7.0"
   },
   "dependencies": {
-    "@angular/animations": "13.2.2",
-    "@angular/cdk": "13.2.1",
-    "@angular/common": "13.2.2",
-    "@angular/compiler": "13.2.2",
-    "@angular/core": "13.2.2",
+    "@angular/animations": "14.2.2",
+    "@angular/cdk": "14.2.2",
+    "@angular/common": "14.2.2",
+    "@angular/compiler": "14.2.2",
+    "@angular/core": "14.2.2",
     "@angular/flex-layout": "*",
-    "@angular/forms": "13.2.2",
-    "@angular/material": "13.2.1",
-    "@angular/material-moment-adapter": "13.2.1",
-    "@angular/platform-browser": "13.2.2",
-    "@angular/platform-browser-dynamic": "13.2.2",
-    "@angular/pwa": "13.2.2",
-    "@angular/router": "13.2.2",
-    "@angular/service-worker": "13.2.2",
+    "@angular/forms": "14.2.2",
+    "@angular/material": "14.2.2",
+    "@angular/material-moment-adapter": "14.2.2",
+    "@angular/platform-browser": "14.2.2",
+    "@angular/platform-browser-dynamic": "14.2.2",
+    "@angular/pwa": "14.x",
+    "@angular/router": "14.2.2",
+    "@angular/service-worker": "14.2.2",
     "@ngneat/transloco": "3.1.3",
     "@ngneat/transloco-keys-manager": "3.3.3",
     "@types/prismjs": "1.16.6",
@@ -162,3 +162,4 @@
     "zone.js": "0.11.4"
   }
 }
+
