--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-dynamic-form-builder",
-  "version": "2.3.0rc1",
+  "version": "2.3.0rc2",
   "description": "FormBuilder + class-transformer-global-storage + class-validator-multi-lang = dynamic form group builder for Angular12+",
   "keywords": [
     "form-builder",
@@ -136,7 +136,7 @@
     "@angular/common": "14.2.2",
     "@angular/compiler": "14.2.2",
     "@angular/core": "14.2.2",
-    "@angular/flex-layout": "*",
+    "@angular/flex-layout": "^14.0.0-beta.40",
     "@angular/forms": "14.2.2",
     "@angular/material": "14.2.2",
     "@angular/material-moment-adapter": "14.2.2",
@@ -148,7 +148,7 @@
     "@ngneat/transloco": "3.1.3",
     "@ngneat/transloco-keys-manager": "3.3.3",
     "@types/prismjs": "1.16.6",
-    "class-transformer-global-storage": "0.4.1-1",
+    "class-transformer-global-storage": "npm:@yoolabs/class-transformer@^0.5.1",
     "codelyzer": "6.0.2",
     "cp-cli": "2.0.0",
     "gh-pages": "3.2.3",
@@ -156,7 +156,7 @@
     "lodash.get": "4.4.2",
     "markdown-loader": "8.0.0",
     "moment": "2.29.1",
-    "ngx-markdown": "13.1.0",
+    "ngx-markdown": "~14.0.1",
     "prismjs": "1.26.0",
     "raw-loader": "4.0.2",
     "reflect-metadata": "0.1.13",
