Revert "Merge commit '1c7b8ddfc35519b2c0c8b68ce09e2f6e3b456554' into custom-master"
This reverts commit fd3f33211779e014b82f484f286bb8c221deb7aa, reversing
changes made to a160113f01fc81b0fd595464e94300651d1070e3.

--- a/apps/demo/project.json
+++ b/apps/demo/project.json
@@ -1,6 +1,4 @@
 {
-  "name": "demo",
-  "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "sourceRoot": "apps/demo/src",
   "prefix": "ngx-dynamic-form-builder",
@@ -11,14 +9,7 @@
       "options": {
         "allowedCommonJsDependencies": [
           "class-validator-multi-lang",
-          "validator",
-          "lodash.set",
-          "lodash.mergewith",
-          "lodash.clonedeep",
-          "lodash.get",
-          "@ngneat/transloco-keys-manager/marker",
-          "@ngneat/transloco",
-          "moment"
+          "validator"
         ],
         "outputPath": "dist/apps/demo",
         "index": "apps/demo/src/index.html",
@@ -109,9 +100,9 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/apps/demo"],
+      "outputs": ["coverage/apps/demo"],
       "options": {
-        "jestConfig": "apps/demo/jest.config.ts",
+        "jestConfig": "apps/demo/jest.config.js",
         "passWithNoTests": true
       }
     }
