--- a/apps/debug/project.json
+++ b/apps/debug/project.json
@@ -1,6 +1,4 @@
 {
-  "name": "debug",
-  "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "sourceRoot": "apps/debug/src",
   "prefix": "ngx-dynamic-form-builder",
@@ -85,14 +83,17 @@
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "options": {
-        "lintFilePatterns": ["apps/debug/**/*.ts", "apps/debug/**/*.html"]
+        "lintFilePatterns": [
+          "apps/debug/src/**/*.ts",
+          "apps/debug/src/**/*.html"
+        ]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": ["coverage/apps/debug"],
       "options": {
-        "jestConfig": "apps/debug/jest.config.ts",
+        "jestConfig": "apps/debug/jest.config.js",
         "passWithNoTests": true
       }
     }
