--- a/package.json
+++ b/package.json
@@ -78,20 +78,20 @@
   },
   "private": true,
   "devDependencies": {
-    "@angular-devkit/build-angular": "14.2.2",
-    "@angular-eslint/eslint-plugin": "14.0.4",
-    "@angular-eslint/eslint-plugin-template": "14.0.4",
-    "@angular-eslint/template-parser": "14.0.4",
-    "@angular/cli": "~14.2.0",
-    "@angular/compiler-cli": "14.2.2",
-    "@angular/language-service": "14.2.2",
-    "@nrwl/angular": "14.7.5",
-    "@nrwl/cli": "14.7.5",
-    "@nrwl/cypress": "14.7.5",
-    "@nrwl/eslint-plugin-nx": "14.7.5",
-    "@nrwl/jest": "14.7.5",
-    "@nrwl/linter": "14.7.5",
-    "@nrwl/workspace": "14.7.5",
+    "@angular-devkit/build-angular": "15.1.1",
+    "@angular-eslint/eslint-plugin": "15.0.0",
+    "@angular-eslint/eslint-plugin-template": "15.0.0",
+    "@angular-eslint/template-parser": "15.0.0",
+    "@angular/cli": "15.1.0",
+    "@angular/compiler-cli": "15.1.0",
+    "@angular/language-service": "15.1.0",
+    "@nrwl/angular": "15.5.1",
+    "@nrwl/cli": "15.5.1",
+    "@nrwl/cypress": "15.5.1",
+    "@nrwl/eslint-plugin-nx": "15.5.1",
+    "@nrwl/jest": "15.5.1",
+    "@nrwl/linter": "15.5.1",
+    "@nrwl/workspace": "15.5.1",
     "@types/jest": "28.1.8",
     "@types/lodash.clonedeep": "4.5.6",
     "@types/lodash.get": "4.4.6",
@@ -109,15 +109,15 @@
     "eslint-plugin-cypress": "2.12.1",
     "jest": "28.1.3",
     "jest-environment-jsdom": "28.1.1",
-    "jest-preset-angular": "12.2.2",
+    "jest-preset-angular": "12.2.4",
     "lite-server": "2.6.1",
     "lodash.clonedeep": "4.5.0",
     "lodash.mergewith": "4.6.2",
     "lodash.set": "4.3.2",
     "mochawesome": "7.0.1",
-    "ng-packagr": "14.2.1",
+    "ng-packagr": "15.1.1",
     "npm-run-all": "4.1.5",
-    "nx": "14.7.5",
+    "nx": "15.5.1",
     "postcss": "8.4.5",
     "postcss-import": "14.1.0",
     "postcss-preset-env": "7.5.0",
@@ -131,20 +131,20 @@
     "validator": "13.7.0"
   },
   "dependencies": {
-    "@angular/animations": "14.2.2",
-    "@angular/cdk": "14.2.2",
-    "@angular/common": "14.2.2",
-    "@angular/compiler": "14.2.2",
-    "@angular/core": "14.2.2",
-    "@angular/flex-layout": "^14.0.0-beta.40",
-    "@angular/forms": "14.2.2",
-    "@angular/material": "14.2.2",
-    "@angular/material-moment-adapter": "14.2.2",
-    "@angular/platform-browser": "14.2.2",
-    "@angular/platform-browser-dynamic": "14.2.2",
-    "@angular/pwa": "14.x",
-    "@angular/router": "14.2.2",
-    "@angular/service-worker": "14.2.2",
+    "@angular/animations": "15.1.0",
+    "@angular/cdk": "15.1.0",
+    "@angular/common": "15.1.0",
+    "@angular/compiler": "15.1.0",
+    "@angular/core": "15.1.0",
+    "@angular/flex-layout": "^14.0.0-beta.41",
+    "@angular/forms": "15.1.0",
+    "@angular/material": "15.1.0",
+    "@angular/material-moment-adapter": "15.1.0",
+    "@angular/platform-browser": "15.1.0",
+    "@angular/platform-browser-dynamic": "15.1.0",
+    "@angular/pwa": "15.1.0",
+    "@angular/router": "15.1.0",
+    "@angular/service-worker": "15.1.0",
     "@ngneat/transloco": "3.1.3",
     "@ngneat/transloco-keys-manager": "3.3.3",
     "@types/prismjs": "1.16.6",
@@ -165,3 +165,4 @@
     "zone.js": "0.11.4"
   }
 }
+
