--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "@angular-eslint/eslint-plugin": "15.0.0",
     "@angular-eslint/eslint-plugin-template": "15.0.0",
     "@angular-eslint/template-parser": "15.0.0",
-    "@angular/cli": "15.1.0",
+    "@angular/cli": "~15.1.0",
     "@angular/compiler-cli": "15.1.0",
     "@angular/language-service": "15.1.0",
     "@nrwl/angular": "15.5.1",
@@ -165,4 +165,3 @@
     "zone.js": "0.11.4"
   }
 }
-
